Publications: add policy/media entries to bib; fix mobile TOC and venue wrapping
- Convert policy/media entries to @misc in papers.bib; replace hand-crafted HTML in publications.md with {% bibliography --query @misc %}
- Fix TOC sidebar taking space on mobile by replacing inline flex overrides with d-none d-sm-block
- Allow pub-venue to wrap on long journal names with white-space: normal and word-break: break-word

--- a/_sass/_publications.scss
+++ b/_sass/_publications.scss
@@ -160,6 +160,8 @@
       .pub-venue {
         margin-top: 0.01rem;
         line-height: 1;
+        white-space: normal;
+        word-break: break-word;
       }
 
       .pub-sep {
